Migration to Java 10 (#6437) - ElasticSearch dependencies upgraded from 1.5.2 to 2.4.6 - Changes in ES mapping definitions - Command line parameter to allow dots in ES mapping names - Ignite cluster disabled in ClusterManagerImpl and runtime/build.gradle